--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -196,9 +196,10 @@ en:
     welcome to youversion:                      "Welcome to the YouVersion community!"
     confirm email:                              "Please check your email and click the link to confirm your registration."
     sign up for an account:                     "Create a Free YouVersion Account"
-    follow user:                                "Follow %{user}"
     follow:                                     "Follow"
+    follow user:                                "Follow %{user}"
     unfollow:                                   "Unfollow"
+    unfollow user:                              "Unfollow %{user}"
     following title:                            "People I'm Following"
     user does not follow you:                   "%{user} does not follow you."
     recent activity:                            "Recent Activity"
